--- a/roles/role_desplegar_vbox/tasks/prueba/vboxvm.yml
+++ b/roles/role_desplegar_vbox/tasks/prueba/vboxvm.yml
@@ -1,7 +1,20 @@
+- name: Prueba agrupando ecos
+  set_fact:
+    vbvmgst_sources: |
+      {% if tarea in 'small' %}
+      1,1
+      {% elif tarea in 'medium' %}
+      1,2
+      {% elif tarea in 'large' %}
+      2,2
+      {% elif tarea in 'xlarge' %}
+      2,3
+      {% endif %}
+
 - name: Prueba de varibles
   debug:
     msg: 
       - "{{ idcrqinc }}"
       - "{{ vbvmgst_name }}"
       - "{{ vbvmgst_ostype }}"
-      - "{{ vbvmgst_sources.split('-')[0] }}"
+      - "{{ vbvmgst_sources }}"
