--- a/roles/role_desplegar_vbox/tasks/prueba/vboxvm.yml
+++ b/roles/role_desplegar_vbox/tasks/prueba/vboxvm.yml
@@ -1,13 +1,13 @@
 - name: Prueba agrupando ecos
   set_fact:
     vbvmgst_source: |
-      {% if vbvmgst_sources in 'small' %}
+      {% if vbvmgst_sources in small %}
       1,1
-      {% elif vbvmgst_sources in 'medium' %}
+      {% elif vbvmgst_sources in medium %}
       1,2
-      {% elif vbvmgst_sources in 'large' %}
+      {% elif vbvmgst_sources in large %}
       2,2
-      {% elif vbvmgst_sources in 'xlarge' %}
+      {% elif vbvmgst_sources in xlarge %}
       2,3
       {% endif %}
 
