--- a/roles/role_desplegar_vbox/tasks/prueba/vboxvm.yml
+++ b/roles/role_desplegar_vbox/tasks/prueba/vboxvm.yml
@@ -17,4 +17,4 @@
       - "{{ idcrqinc }}"
       - "{{ vbvmgst_name }}"
       - "{{ vbvmgst_ostype }}"
-      - "{{ vbvmgst_source }}"
+      - "{{ vbvmgst_source | trim }}"
