--- a/roles/role_desplegar_vbox/tasks/crear/vboxvm.yml
+++ b/roles/role_desplegar_vbox/tasks/crear/vboxvm.yml
@@ -1,9 +1,8 @@
 ---
-- name: Tareas por bloques - Crear de virtuales en MasterServer VirtualBox
-  block:
-    - name: Creando VirtuaBox {{ vmostype }}
+- block:
+    - name: Creando VM {{ vmostype }} - {{ vmname }} en VirtuaBox
       shell: |
-        VBoxManage createvm --name {{ vmname }} --ostype {{ vmostype }} --register --basefolder {{ vmdftfld }}
+        VBoxManage createvm --name {{ vmname }} --ostype {{ vmostype }} --register --basefolder {{ vmdstoresso }}
         VBoxManage modifyvm {{ vmname }} --ioapic on
         VBoxManage modifyvm {{ vmname }} --cpus {{ vmcpu }}
         VBoxManage modifyvm {{ vmname }} --audio none
@@ -12,21 +11,25 @@
         VBoxManage modifyvm {{ vmname }} --vram 16
         VBoxManage modifyvm {{ vmname }} --nic1 bridged --nictype1 82545EM --bridgeadapter1 enp0s31f6
         VBoxManage modifyvm {{ vmname }} --nic2 hostonly --nictype2 82545EM --hostonlyadapter2 vboxnet0
-        VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/0/V4/IP 2>/dev/null | sed 's/Value: //g'
-        VBoxManage guestproperty get {{ vmname }} /VirtualBox/GuestInfo/Net/1/V4/IP 2>/dev/null | sed 's/Value: //g'
         VBoxManage storagectl {{ vmname }} --name SATA --add sata --controller IntelAHCI --portcount 1
-        VBoxManage clonemedium {{ vmclnfld }}/vmos/{{ vmostype }}.vdi {{ dirdisknvmg }}/{{ vmname }}/sd_system.vdi --format VDI
-        VBoxManage storageattach {{ vmname }} --storagectl SATA --port 0 --device 0 --type hdd --medium {{ dirdisknvmg }}/{{ vmname }}/vbal{{ vbvmcl_oslver }}_sda.vdi
-        VBoxManage createhd --filename {{ vmdftfld }}/{{ vmname }}/sd_data00.vdi --size {{ vmdsk }} --format VDI
-        VBoxManage storageattach {{ vmname }} --storagectl SATA --port 1 --device 0 --type hdd --medium {{ vmdftfld }}/{{ vmname }}/sd_data00.vdi
+        VBoxManage clonemedium {{ vmdstoresso }}/{{ vmostype }}/vbal{{ vbvmcl_oslver }}clone.vdi {{ vmdstoresso }}/{{ vmname }}/vbal{{ vbvmcl_oslver }}_sda.vdi --format VDI
+        VBoxManage storageattach {{ vmname }} --storagectl SATA --port 0 --device 0 --type hdd --medium {{ vmdstoresso }}/{{ vmname }}/vbal{{ vbvmcl_oslver }}_sda.vdi
+      register: vbxvml_sttos
+
+- block:
+    - name: Disco VM - {{ vmostype }} - {{ vmname }} en VirtuaBox
+      shell: |
+        VBoxManage createhd --filename {{ vmdstoredsk }}/{{ vmname }}/vbal{{ vbvmcl_oslver }}_{{ vbvmcl_nldks }}.vdi --size {{ nwdsksz }} --format VDI
+        VBoxManage storageattach {{ vmname }} --storagectl SATA --port 1 --device 0 --type hdd --medium {{ vmdstoredsk }}/{{ vmname }}/vbal{{ vbvmcl_oslver }}_{{ vbvmcl_nldks }}.vdi
+      register: vbxvml_sttsd
 
       # register: vbxvml_sttos
       # when: "'RedHat' in vmostype"
 
     # - name: Asignando disco extra para VirtuaBox Linux
     #   shell: |
-    #     VBoxManage createhd --filename {{ vmdftfld }}/{{ vmname }}/sd_data00.vdi --size {{ vmdsk }} --format VDI
-    #     VBoxManage storageattach {{ vmname }} --storagectl SATA --port 1 --device 0 --type hdd --medium {{ vmdftfld }}/{{ vmname }}/sd_data00.vdi
+    #     VBoxManage createhd --filename {{ vmdstoresso }}/{{ vmname }}/sd_data00.vdi --size {{ vmdsk }} --format VDI
+    #     VBoxManage storageattach {{ vmname }} --storagectl SATA --port 1 --device 0 --type hdd --medium {{ vmdstoresso }}/{{ vmname }}/sd_data00.vdi
     #   register: vbxvml_sttsd
     #   when: "vbvmcl_nldks == 'sdb'"
 
