--- a/roles/role_desplegar_vbox/defaults/main.yml
+++ b/roles/role_desplegar_vbox/defaults/main.yml
@@ -1,6 +1,7 @@
 ---
 vmdstoresso: /vmbox/Virtuals
 vmdstoredsk: /vmboxs/Virtuals
+vmdstoretpt: /vmboxs/Templates
 
 tower_base_url: "http://172.19.0.2:8052"
 tower_organization: "bvmorg"
