--- a/roles/role_desplegar_vbox/tasks/crear/vboxvm.yml
+++ b/roles/role_desplegar_vbox/tasks/crear/vboxvm.yml
@@ -12,8 +12,8 @@
         VBoxManage modifyvm {{ vmname }} --nic1 bridged --nictype1 82545EM --bridgeadapter1 enp0s31f6
         VBoxManage modifyvm {{ vmname }} --nic2 hostonly --nictype2 82545EM --hostonlyadapter2 vboxnet0
         VBoxManage storagectl {{ vmname }} --name SATA --add sata --controller IntelAHCI --portcount 1
-        VBoxManage clonemedium {{ vmdstoresso }}/{{ vmostype }}/vbal{{ vbvmcl_oslver }}clone.vdi {{ vmdstoresso }}/{{ vmname }}/vbal{{ vbvmcl_oslver }}_sda.vdi --format VDI
-        VBoxManage storageattach {{ vmname }} --storagectl SATA --port 0 --device 0 --type hdd --medium {{ vmdstoresso }}/{{ vmname }}/vbal{{ vbvmcl_oslver }}_sda.vdi
+        VBoxManage clonemedium {{ vmdstoretpt }}/{{ vmostype }}.vdi {{ vmdstoresso }}/{{ vmname }}/{{ 'sd_system00' if 'RedHat' in vmostype else 'hd_system00' }}.vdi --format VDI
+        VBoxManage storageattach {{ vmname }} --storagectl SATA --port 0 --device 0 --type hdd --medium {{ vmdstoresso }}/{{ vmname }}/{{ 'sd_system00' if 'RedHat' in vmostype else 'hd_system00' }}.vdi
       register: vbxvml_sttos
 
 - block:
@@ -82,19 +82,19 @@
 #       register: vbvmgt_envw
 #       when: "'Windows' in vmostype"
 
-- name: Tareas por bloques - Imprimir Resultados VM Linux
-  block:
-    - name: Resultado de VirtualBox Guest
-      debug:
-        msg:
-          - "Informacion de la VirtualBox Guest"
-          - "Hostname: {{ vmname }}"
-          - "Distribucion OS: {{ vmostype }}"
-          - "Ambiente: {{ vbvmgt_envl.stdout }}"
-          - "Numero de CPU's: {{ vmcpu }}"
-          - "Memoria Total: {{ vmmem }}"
-          - "IP Dinamica1: {{ vbxvm_sttnet.stdout_lines[0] }}"
-          - "IP Dinamica2: {{ vbxvm_sttnet.stdout_lines[1] }}"
+# - name: Tareas por bloques - Imprimir Resultados VM Linux
+#   block:
+#     - name: Resultado de VirtualBox Guest
+#       debug:
+#         msg:
+#           - "Informacion de la VirtualBox Guest"
+#           - "Hostname: {{ vmname }}"
+#           - "Distribucion OS: {{ vmostype }}"
+#           - "Ambiente: {{ vbvmgt_envl.stdout }}"
+#           - "Numero de CPU's: {{ vmcpu }}"
+#           - "Memoria Total: {{ vmmem }}"
+#           - "IP Dinamica1: {{ vbxvm_sttnet.stdout_lines[0] }}"
+#           - "IP Dinamica2: {{ vbxvm_sttnet.stdout_lines[1] }}"
       # when: "'RedHat' in vmostype"
 
     # - name: Resultado de VirtualBox Guest
