--- a/roles/role_desplegar_vbox/tasks/crear/vboxvm.yml
+++ b/roles/role_desplegar_vbox/tasks/crear/vboxvm.yml
@@ -20,7 +20,7 @@
     - name: Disco VM - {{ vmostype }} - {{ vmname }} en VirtuaBox
       shell: |
         VBoxManage createhd --filename {{ vmdstoredsk }}/{{ vmname }}/{{ 'sd_data00' if 'RedHat' in vmostype else 'hd_data00' }}.vdi --size {{ vmdsk }} --format VDI
-        VBoxManage storageattach {{ vmname }} --storagectl SATA --port 1 --device 0 --type hdd --medium {{ vmdstoredsk }}/{{ vmname }}/{{ 'sd_data00' if 'RedHat' in vmostype else 'hd_data00' }}.vdi.vdi
+        VBoxManage storageattach {{ vmname }} --storagectl SATA --port 1 --device 0 --type hdd --medium {{ vmdstoredsk }}/{{ vmname }}/{{ 'sd_data00' if 'RedHat' in vmostype else 'hd_data00' }}.vdi
       register: vbxvml_sttsd
 
       # register: vbxvml_sttos
