--- a/roles/role_desplegar_vbox/tasks/crear/vboxvm.yml
+++ b/roles/role_desplegar_vbox/tasks/crear/vboxvm.yml
@@ -9,8 +9,10 @@
         VBoxManage modifyvm {{ vmname }} --memory {{ vmmem }}
         VBoxManage modifyvm {{ vmname }} --graphicscontroller vmsvga
         VBoxManage modifyvm {{ vmname }} --vram 16
-        VBoxManage modifyvm {{ vmname }} --nic1 bridged --nictype1 82545EM --bridgeadapter1 enp0s31f6
-        VBoxManage modifyvm {{ vmname }} --nic2 hostonly --nictype2 82545EM --hostonlyadapter2 vboxnet0
+        sleep 3
+        VBoxManage modifyvm {{ vmname }} --nic1 natnetwork --natnetwork1 vboxnat0
+        sleep 3
+        VBoxManage modifyvm {{ vmname }} --nic2 hostonly --hostonlyadapter2 vboxnet0
         VBoxManage storagectl {{ vmname }} --name "IDE Controller" --add ide
         VBoxManage storageattach {{ vmname }} --storagectl "IDE Controller" --port 0 --device 1 --type dvddrive --medium emptydrive
         VBoxManage storagectl {{ vmname }} --name SATA --add sata --controller IntelAHCI --portcount 10
