--- a/roles/role_desplegar_vbox/tasks/crear/vboxvm.yml
+++ b/roles/role_desplegar_vbox/tasks/crear/vboxvm.yml
@@ -44,7 +44,8 @@
 
 - name: Recursos finales de la VM {{ vmostype }} - {{ vmname }} en VirtuaBox
   debug:
-    msg: 
+    msg:
+      - "La VM {{ vmostype }} - {{ vmname }} en VirtuaBox - Activa y con los recursos:" 
       - "Tipo: {{ vmostype }}"
       - "Nombre: {{ vmname }}"
       - "Vitualizador: VirtuaBox"
